--- a/src/components/Listing/styles.css
+++ b/src/components/Listing/styles.css
@@ -22,3 +22,34 @@
   background-color: #722AA0;
   color: white;
 }
+
+
+.price-tag {
+  bottom: 0px;
+  left: 0px;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.apartments {
+  overflow-y: scroll;
+  height: 491px;
+}
+
+::-webkit-scrollbar {
+  position: absolute;
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 1);
+  opacity: 0;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 9px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
